--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "update-lga-cases": "node dist/run-update-lga-cases.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
