--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   },
   "homepage": "https://github.com/marsonparulian/covid19-lga-api#readme",
   "dependencies": {
+    "@types/node": "^16.7.13",
     "cross-fetch": "^3.1.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   }
 }
