--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.7.13",
     "@types/supertest": "^2.0.11",
     "cross-fetch": "^3.1.4",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
