--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "swagger-autogen": "^2.11.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
