--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
+    "swaggerAutogen": "node src/doc/swagger.js",
     "build": "tsc",
     "update-lga-cases": "node dist/run-update-lga-cases.js",
     "test": "jest",
