--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.13",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "cross-fetch": "^3.1.4",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
     "supertest": "^6.1.6",
-    "swagger-autogen": "^2.11.2"
+    "swagger-autogen": "^2.11.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
