--- a/.github/workflows/update-lga.workflow.yaml
+++ b/.github/workflows/update-lga.workflow.yaml
@@ -15,3 +15,4 @@ jobs:
             node-version: '14'
         - run: npm install
         - run: npm run build
+        - run: npm run update-lga-cases
